# desafio-aquarela

./: .gitignore  Dockerfile  README.md  database.db  docker-compose.yaml  entrypoint.sh  pyproject.toml
desafio_aquarela/: app.py  database.py  settings.py
desafio_aquarela/models/: __init__.py  leaders_model.py  position_model.py  userModel.py  user_model.py
desafio_aquarela/routes/: auth_route.py  leader_route.py  position_route.py  user_route.py
desafio_aquarela/schemas/: auth_schema.py  leader_schema.py  position_schema.py  user.py  user_schema.py
desafio_aquarela/service/: auth.py  validator.py
migrations/: env.py
migrations/versions/: 14ff03e221cf_creating_leaders_table.py  2a0d14f6c638_adding_enum_to_status.py  8a1f76a9caa0_creating_position_table.py  9928fcc91097_creating_leaders_table.py  9c91affc0ab2_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_leader.py  test_position.py  test_security.py
